<resources>
    <string name="app_name">Attend Class</string>
    <string name="start_error_prefix">Advertising Start Error:</string>
    <string name="start_error_already_started">Service already started…</string>
    <string name="start_error_too_large">Too large data size…</string>
    <string name="start_error_unsupported">Feature unsupported…</string>
    <string name="start_error_internal">Internal error…</string>
    <string name="start_error_too_many">Too many advertisers…</string>
    <string name="advertising_timedout">Advertising timeout…</string>
    <string name="start_error_unknown">Unknow error…</string>
    <string name="bt_null">Bluetooth not supported…</string>
    <string name="bluetooth_advertisment_not_supported">Bluetooth Advertisement not supported…</string>
    <string name="bluetooth_not_supported">Bluetooth not supported…</string>
    <string name="user_declined_on_bluetooth">User declined to enable bluetooth. Quiting…</string>
    <string name="scanning_already_started">Scanning already started…</string>
    <string name="start_error_registration_failed">Application registration failed…</string>
    <string name="scanning_time_out">Scanning timed out…</string>
    <string name="no_device_name">No device name</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="note">Note: each device only allow one matric number</string>
    <string name="tab_text_1">Lecturer</string>
    <string name="tab_text_2">Student</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="stu_matric_num_hint">Matric Number</string>
    <string name="log_in_button">Log in</string>
    <string name="register_button">Register</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="first_time_usage_hint">First time user?</string>
    <string name="name_list">Name List</string>
    <string name="verification_code">Verification Code</string>
    <string name="greeting">Greeting</string>
    <string name="advertised_times">Advertised times</string>
</resources>
