<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.gszzz.attendclass.LecturerRegister">

    <EditText
        android:id="@+id/usernameText"
        android:layout_width="275dp"
        android:layout_height="44dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/passwordText"
        android:layout_width="275dp"
        android:layout_height="44dp"
        android:layout_alignStart="@+id/usernameText"
        android:layout_below="@+id/usernameText"
        android:layout_marginTop="23dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/verificationCodeText"
        android:layout_width="275dp"
        android:layout_height="44dp"
        android:layout_below="@+id/passwordText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:hint="@string/verification_code"
        android:inputType="textPassword"
        android:textSize="14sp" />

    <Button
        android:id="@+id/lecturerRegisterButton"
        android:layout_width="275dp"
        android:layout_height="44dp"
        android:layout_below="@+id/verificationCodeText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:background="@android:color/holo_green_light"
        android:onClick="registerOnClicked"
        android:text="@string/register_button"
        android:textSize="14sp" />
</RelativeLayout>
