<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.gszzz.attendclass.LecturerTab">

    <TextView
        android:id="@+id/section_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin" />

    <EditText
        android:id="@+id/lecIDInput"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/section_label"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/passwordInput"
        android:layout_width="275dp"
        android:layout_height="44dp"
        android:layout_alignStart="@+id/loginButton"
        android:layout_below="@+id/lecIDInput"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textSize="14sp" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="275dp"
        android:layout_height="44dp"
        android:layout_alignStart="@+id/lecIDInput"
        android:layout_below="@+id/passwordInput"
        android:layout_marginTop="14dp"
        android:background="@android:color/holo_red_light"
        android:text="@string/log_in_button"
        android:textSize="14sp" />

    <Button
        android:id="@+id/regisButton"
        android:layout_width="275dp"
        android:layout_height="44dp"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/loginButton"
        android:layout_marginBottom="102dp"
        android:background="@android:color/holo_green_light"
        android:text="@string/register_button"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="275dp"
        android:layout_height="20dp"
        android:layout_above="@+id/regisButton"
        android:layout_alignStart="@+id/regisButton"
        android:layout_marginBottom="6dp"
        android:text="@string/first_time_usage_hint"
        android:textSize="14sp" />

</RelativeLayout>