<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.gszzz.attendclass.StudentTab">

    <TextView
        android:id="@+id/section_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"/>

    <EditText
        android:id="@+id/matricNumInput"
        android:layout_width="275dp"
        android:layout_height="44dp"
        android:layout_below="@+id/section_label"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="@string/stu_matric_num_hint"
        android:inputType="textPersonName"
        android:textSize="14sp" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="275dp"
        android:layout_height="44dp"
        android:layout_alignStart="@+id/matricNumInput"
        android:layout_below="@+id/matricNumInput"
        android:layout_marginTop="42dp"
        android:background="@android:color/holo_red_light"
        android:text="@string/log_in_button"
        android:textColor="@android:color/background_dark"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/note" />

</RelativeLayout>